// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_document.js 1`] = `
"// This is to generate a <link rel=\\"modulepreload\\" href='\${first}}'> to the <head>
// As Studio v3 is in developer preview there's not yet a simple way to just add a <link> tag to the <head>
// Thus we have to re-implement DefaultDocument to make it happen.
// Expect this to get much easier before v3 hits stable

import React from 'react'
import {GlobalErrorHandler} from 'sanity/_unstable'

const globalStyles = \`
  html {
    background-color: #f1f3f6;
  }
  html,
  body,
  #sanity {
    height: 100%;
  }
  body {
    margin: 0;
    -webkit-font-smoothing: antialiased;
  }
\`

function Favicons({basePath}) {
  const base = \`\${basePath.replace(/\\\\/+$/, '')}/static\`
  return (
    <>
      <link rel=\\"icon\\" href={\`\${base}/favicon.ico\`} sizes=\\"any\\" />
      <link rel=\\"icon\\" href={\`\${base}/favicon.svg\`} type=\\"image/svg+xml\\" />
      <link rel=\\"apple-touch-icon\\" href={\`\${base}/apple-touch-icon.png\`} />
      <link rel=\\"manifest\\" href={\`\${base}/manifest.webmanifest\`} />
    </>
  )
}

const EMPTY_ARRAY = []
export default function DefaultDocument(props) {
  const {entryPath, css = EMPTY_ARRAY, basePath = '/'} = props
  return (
    <html lang=\\"en\\">
      <head>
        <meta charSet=\\"utf-8\\" />
        <meta
          name=\\"viewport\\"
          content=\\"width=device-width, initial-scale=1, viewport-fit=cover\\"
        />
        <meta name=\\"robots\\" content=\\"noindex\\" />
        <meta name=\\"referrer\\" content=\\"same-origin\\" />
        {/* This is the only line of code we're adding that is different from the default implementation of DefaultDocument */}
        <link
          rel=\\"modulepreload\\"
          href={'\${first}}'}
        />

        <Favicons basePath={basePath} />

        <title>Sanity Studio</title>

        <GlobalErrorHandler />

        {css.map(href => (
          <link key={href} rel=\\"stylesheet\\" href={href} />
        ))}
        <style>{globalStyles}</style>
      </head>
      <body>
        <div id=\\"sanity\\" />
        <script type=\\"module\\" src={entryPath} />
      </body>
    </html>
  )
}"
`;

exports[`_document.tsx 1`] = `
"// This is to generate a <link rel=\\"modulepreload\\" href='\${first}}'> to the <head>
// As Studio v3 is in developer preview there's not yet a simple way to just add a <link> tag to the <head>
// Thus we have to re-implement DefaultDocument to make it happen.
// Expect this to get much easier before v3 hits stable

import React from 'react'
import {type DefaultDocumentProps} from 'sanity'
import {GlobalErrorHandler} from 'sanity/_unstable'

const globalStyles = \`
  html {
    background-color: #f1f3f6;
  }
  html,
  body,
  #sanity {
    height: 100%;
  }
  body {
    margin: 0;
    -webkit-font-smoothing: antialiased;
  }
\`

interface FaviconProps {
  basePath: string
}

function Favicons({basePath}: FaviconProps) {
  const base = \`\${basePath.replace(/\\\\/+$/, '')}/static\`
  return (
    <>
      <link rel=\\"icon\\" href={\`\${base}/favicon.ico\`} sizes=\\"any\\" />
      <link rel=\\"icon\\" href={\`\${base}/favicon.svg\`} type=\\"image/svg+xml\\" />
      <link rel=\\"apple-touch-icon\\" href={\`\${base}/apple-touch-icon.png\`} />
      <link rel=\\"manifest\\" href={\`\${base}/manifest.webmanifest\`} />
    </>
  )
}

const EMPTY_ARRAY: never[] = []
export default function DefaultDocument(
  props: DefaultDocumentProps
): React.ReactElement {
  const {entryPath, css = EMPTY_ARRAY, basePath = '/'} = props
  return (
    <html lang=\\"en\\">
      <head>
        <meta charSet=\\"utf-8\\" />
        <meta
          name=\\"viewport\\"
          content=\\"width=device-width, initial-scale=1, viewport-fit=cover\\"
        />
        <meta name=\\"robots\\" content=\\"noindex\\" />
        <meta name=\\"referrer\\" content=\\"same-origin\\" />
        {/* This is the only line of code we're adding that is different from the default implementation of DefaultDocument */}
        <link
          rel=\\"modulepreload\\"
          href={'\${first}}'}
        />

        <Favicons basePath={basePath} />

        <title>Sanity Studio</title>

        <GlobalErrorHandler />

        {css.map(href => (
          <link key={href} rel=\\"stylesheet\\" href={href} />
        ))}
        <style>{globalStyles}</style>
      </head>
      <body>
        <div id=\\"sanity\\" />
        <script type=\\"module\\" src={entryPath} />
      </body>
    </html>
  )
}"
`;

exports[`import-create-theme-dynamic 1`] = `
"const {createTheme, hues} = await import(
  '\${first}}'
)"
`;

exports[`import-create-theme-static 1`] = `"import {createTheme, hues} from '\${first}}'"`;

exports[`import-dynamic-js 1`] = `"const {theme} = await import('\${first}}')"`;

exports[`import-dynamic-ts 1`] = `
"const {theme} = (await import(
  // @ts-expect-error -- TODO setup themer.d.ts to get correct typings
  '\${first}}'
)) as {theme: import('sanity').StudioTheme}"
`;

exports[`import-static 1`] = `"import {theme} from '\${first}}'"`;

exports[`next-config-build-time-js 1`] = `
"module.exports = {
  experimental: {urlImports: ['\${first}}']}
}"
`;

exports[`next-config-build-time-ts 1`] = `
"// @ts-check

/**
 * @type {import('next').NextConfig}
 **/
const nextConfig = {
  experimental: {urlImports: ['\${first}}']}
}

module.exports = nextConfig"
`;

exports[`pages/_document.js 1`] = `
"// This is necessary for SSR to work correctly and prevents broken CSS

import Document from 'next/document'
import {ServerStyleSheet} from 'styled-components'

export default class CustomDocument extends Document {
  static async getInitialProps(ctx) {
    const sheet = new ServerStyleSheet()
    const originalRenderPage = ctx.renderPage

    try {
      ctx.renderPage = () =>
        originalRenderPage({
          enhanceApp: App => props => sheet.collectStyles(<App {...props} />)
        })

      const initialProps = await Document.getInitialProps(ctx)
      return {
        ...initialProps,
        styles: [initialProps.styles, sheet.getStyleElement()]
      }
    } finally {
      sheet.seal()
    }
  }
}"
`;

exports[`pages/_document.tsx 1`] = `
"// This is necessary for SSR to work correctly and prevents broken CSS

import Document, {type DocumentContext} from 'next/document'
import {ServerStyleSheet} from 'styled-components'

export default class CustomDocument extends Document {
  static async getInitialProps(ctx: DocumentContext) {
    const sheet = new ServerStyleSheet()
    const originalRenderPage = ctx.renderPage

    try {
      ctx.renderPage = () =>
        originalRenderPage({
          enhanceApp: App => props => sheet.collectStyles(<App {...props} />)
        })

      const initialProps = await Document.getInitialProps(ctx)
      return {
        ...initialProps,
        styles: [initialProps.styles, sheet.getStyleElement()]
      }
    } finally {
      sheet.seal()
    }
  }
}"
`;

exports[`pages-index 1`] = `
"// Loading the custom theme on the page level instead of in sanity.config

import Head from 'next/head'
import {useEffect, useState} from 'react'
import {Studio} from 'sanity'

import _config from '../sanity.config'

export default function IndexPage() {
  const [config, setConfig] = useState(_config)

  useEffect(
    // Start fetching the theme in parallel with the Studio auth loading
    () =>
      // The webpackIgnore tells webpack to not attempt bundling this dynamic import,
      // and instead let it run natively in the browser at runtime
      void import(
        /* webpackIgnore: true */ '\${first}}'
      ).then(({theme}) => setConfig(config => ({...config, theme}))),
    []
  )

  return <Studio config={config} />
}"
`;

exports[`sanity.cli.js 1`] = `
"// Change target to allow top-level await in sanity.config.js

import {createCliConfig} from 'sanity/cli'

export default createCliConfig({
  api: {projectId: 'b5vzhxkv', dataset: 'production'},
  vite: config => ({...config, build: {...config.build, target: 'esnext'}})
})"
`;

exports[`sanity.cli.ts 1`] = `
"// Change target to allow top-level await in sanity.config.ts

import {createCliConfig} from 'sanity/cli'
import type {UserConfig} from 'vite'

export default createCliConfig({
  api: {projectId: 'b5vzhxkv', dataset: 'production'},
  vite: (config: UserConfig): UserConfig => ({
    ...config,
    build: {...config.build, target: 'esnext'}
  })
})"
`;

exports[`studio-config 1`] = `
"// Add two lines of code to your workspace

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'

import {schemaTypes} from './schemas'

// 1. Add the import
'\${first}}'

export default createConfig({
  theme, // <-- 2. add the theme here

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-create-theme 1`] = `
"// Import createTheme and hues to quickly modify your theme without changing the import URL

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'

import {schemaTypes} from './schemas'

'\${first}}'

export default createConfig({
  theme: createTheme({...hues, primary: {...hues.primary, mid: '#22fca8'}}),

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-create-theme-static-import 1`] = `
"// Import createTheme and hues to quickly modify your theme without changing the import URL

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'

'\${first}}'

import {schemaTypes} from './schemas'

export default createConfig({
  theme: createTheme({...hues, primary: {...hues.primary, mid: '#22fca8'}}),

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-local-import 1`] = `
"// Add two lines of code to your workspace

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'
// 1. Add the import to the theme.js you downloaded
import {theme} from './theme'

import {schemaTypes} from './schemas'

export default createConfig({
  theme, // <-- 2. add the theme here

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-local-import-ts 1`] = `
"// Add the theme import and its typings to your workspace

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'

import {schemaTypes} from './schemas'

// 1. Add the import to the theme.js you downloaded
import {theme as _theme} from './theme'

// 2. Assign typings to the theme
const theme = _theme as import('sanity').StudioTheme

export default createConfig({
  theme, // <-- 3. add the theme here

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-next-runtime-1 1`] = `
"// There's no theme import in this file since we're handling that in a useEffect in the index page

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'
import {schemaTypes} from './schemas'

export default createConfig({
  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-next-runtime-2 1`] = `
"// Allow reading the default theme variables while the custom theme is loading

import {createConfig, defaultTheme} from 'sanity'
import {deskTool} from 'sanity/desk'
import {schemaTypes} from './schemas'

export default createConfig({
  theme: defaultTheme,

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`studio-config-static-import 1`] = `
"// Add two lines of code to your workspace

import {createConfig} from 'sanity'
import {deskTool} from 'sanity/desk'
// 1. Add the import
'\${first}}'

import {schemaTypes} from './schemas'

export default createConfig({
  theme, // <-- 2. add the theme here

  name: 'default',
  title: 'My Sanity Project',
  projectId: 'b5vzhxkv',
  dataset: 'production',
  plugins: [deskTool()],
  schema: {types: schemaTypes}
})"
`;

exports[`themer.d.ts 1`] = `
"module '\${first}}' {
  interface Hue
    extends Omit<import('@sanity/color').ColorHueConfig, 'title' | 'midPoint'> {
    midPoint: 50 | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900 | 950
  }
  interface Hues {
    default: Hue
    transparent: Hue
    primary: Hue
    positive: Hue
    caution: Hue
    critical: Hue
  }
  const hues: Hues
  type Theme = import('sanity').StudioTheme
  const createTheme = (hues: Hues): Theme => theme
  const theme: Theme

  export {hues, createTheme, theme}
}"
`;

exports[`tsconfig 1`] = `
"{
  \\"compilerOptions\\": {
    // target needs to be es2017 or newer to allow top-level await
    \\"target\\": \\"es2017\\",

    \\"lib\\": [\\"dom\\", \\"dom.iterable\\", \\"esnext\\"],
    \\"allowJs\\": true,
    \\"skipLibCheck\\": true,
    \\"strict\\": true,
    \\"forceConsistentCasingInFileNames\\": true,
    \\"noEmit\\": true,
    \\"esModuleInterop\\": true,
    \\"module\\": \\"esnext\\",
    \\"moduleResolution\\": \\"node\\",
    \\"resolveJsonModule\\": true,
    \\"isolatedModules\\": true,
    \\"jsx\\": \\"preserve\\",
    \\"incremental\\": true
  },
  \\"include\\": [\\"**/*.ts\\", \\"**/*.tsx\\"],
  \\"exclude\\": [\\"node_modules\\"]
}"
`;
